k8s/k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pfeworks-ingress
  namespace: pfeworks
spec:
  ingressClassName: traefik
  rules:
    - host: app.pfeworks.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pfe-frontend
                port:
                  number: 80
    - host: api.pfeworks.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pfe-backend
                port:
                  number: 8099
    - host: keycloak.pfeworks.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pfe-keycloak
                port:
                  number: 8080
